[gd_scene load_steps=5 format=3 uid="uid://duhtmafxj18g5"]

[ext_resource type="Theme" uid="uid://d3dm8tqfg7pxq" path="res://assets/theme.tres" id="1_me571"]
[ext_resource type="Script" path="res://scripts/views/NewProject.gd" id="2_1p57r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sbr3a"]
bg_color = Color(0.04, 0.04, 0.05, 1)
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u3x6n"]
bg_color = Color(0.08, 0.08, 0.1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="NewProject" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_me571")
script = ExtResource("2_1p57r")

[node name="BodyPart" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.152222
anchor_right = 1.0
anchor_bottom = 0.971111
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sbr3a")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="BodyPart"]
layout_mode = 2

[node name="NewProject" type="Label" parent="BodyPart/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Create your new Project"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="BodyPart/VBoxContainer"]
layout_mode = 2

[node name="ModeForm" type="TabContainer" parent="BodyPart/VBoxContainer"]
layout_mode = 2
tab_alignment = 1
current_tab = 0
all_tabs_in_front = true
use_hidden_tabs_for_min_size = true

[node name="Story" type="Control" parent="BodyPart/VBoxContainer/ModeForm"]
layout_mode = 2
tooltip_text = "Play through the Story of Logic Workbench and discover Digital Logic in a playful way."
metadata/_tab_index = 0

[node name="Data" type="VBoxContainer" parent="BodyPart/VBoxContainer/ModeForm/Story"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 645.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Spacer" type="Control" parent="BodyPart/VBoxContainer/ModeForm/Story/Data"]
layout_mode = 2

[node name="SaveName" type="LineEdit" parent="BodyPart/VBoxContainer/ModeForm/Story/Data"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "The name of your Save"
alignment = 1
expand_to_text_length = true
context_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="CharacterName" type="LineEdit" parent="BodyPart/VBoxContainer/ModeForm/Story/Data"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "The name of your Character"
alignment = 1
expand_to_text_length = true
context_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="Separator" type="Control" parent="BodyPart/VBoxContainer/ModeForm/Story/Data"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="BodyPart/VBoxContainer/ModeForm/Story/Data"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="CancelButton" type="Button" parent="BodyPart/VBoxContainer/ModeForm/Story/Data/Buttons"]
custom_minimum_size = Vector2(140, 25)
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="CreateButton" type="Button" parent="BodyPart/VBoxContainer/ModeForm/Story/Data/Buttons"]
custom_minimum_size = Vector2(140, 25)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Create"

[node name="Career" type="Control" parent="BodyPart/VBoxContainer/ModeForm"]
visible = false
layout_mode = 2
tooltip_text = "Play as a Manager of a Company, that produces all kinds of electronics."
metadata/_tab_index = 1

[node name="Data" type="VBoxContainer" parent="BodyPart/VBoxContainer/ModeForm/Career"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 645.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Spacer" type="Control" parent="BodyPart/VBoxContainer/ModeForm/Career/Data"]
layout_mode = 2

[node name="SaveName" type="LineEdit" parent="BodyPart/VBoxContainer/ModeForm/Career/Data"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "The name of your Save"
alignment = 1
expand_to_text_length = true
context_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="CharacterName" type="LineEdit" parent="BodyPart/VBoxContainer/ModeForm/Career/Data"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "The name of your Character"
alignment = 1
expand_to_text_length = true
context_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="CompanyName" type="LineEdit" parent="BodyPart/VBoxContainer/ModeForm/Career/Data"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "The name of your Company"
alignment = 1
expand_to_text_length = true
context_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="MoneyValue" type="SpinBox" parent="BodyPart/VBoxContainer/ModeForm/Career/Data"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
max_value = 5e+06
value = 5000.0
allow_greater = true
alignment = 1
prefix = "Starter Cash :"
suffix = "â‚¬"

[node name="Separator" type="Control" parent="BodyPart/VBoxContainer/ModeForm/Career/Data"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="BodyPart/VBoxContainer/ModeForm/Career/Data"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="CancelButton" type="Button" parent="BodyPart/VBoxContainer/ModeForm/Career/Data/Buttons"]
custom_minimum_size = Vector2(140, 25)
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="CreateButton" type="Button" parent="BodyPart/VBoxContainer/ModeForm/Career/Data/Buttons"]
custom_minimum_size = Vector2(140, 25)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Create"

[node name="Sandbox" type="Control" parent="BodyPart/VBoxContainer/ModeForm"]
visible = false
layout_mode = 2
tooltip_text = "Just do what you want."
metadata/_tab_index = 2

[node name="Data" type="VBoxContainer" parent="BodyPart/VBoxContainer/ModeForm/Sandbox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 645.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Spacer" type="Control" parent="BodyPart/VBoxContainer/ModeForm/Sandbox/Data"]
layout_mode = 2

[node name="SaveName" type="LineEdit" parent="BodyPart/VBoxContainer/ModeForm/Sandbox/Data"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "The name of your Save"
alignment = 1
expand_to_text_length = true
context_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="Separator" type="Control" parent="BodyPart/VBoxContainer/ModeForm/Sandbox/Data"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="BodyPart/VBoxContainer/ModeForm/Sandbox/Data"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="CancelButton" type="Button" parent="BodyPart/VBoxContainer/ModeForm/Sandbox/Data/Buttons"]
custom_minimum_size = Vector2(140, 25)
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="CreateButton" type="Button" parent="BodyPart/VBoxContainer/ModeForm/Sandbox/Data/Buttons"]
custom_minimum_size = Vector2(140, 25)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Create"

[node name="Custom" type="Control" parent="BodyPart/VBoxContainer/ModeForm"]
visible = false
layout_mode = 2
tooltip_text = "Customize the Game to your likings."
metadata/_tab_index = 3

[node name="Data" type="VBoxContainer" parent="BodyPart/VBoxContainer/ModeForm/Custom"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 645.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Spacer" type="Control" parent="BodyPart/VBoxContainer/ModeForm/Custom/Data"]
layout_mode = 2

[node name="SaveName" type="LineEdit" parent="BodyPart/VBoxContainer/ModeForm/Custom/Data"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "The name of your Save"
alignment = 1
expand_to_text_length = true
context_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="Separator" type="Control" parent="BodyPart/VBoxContainer/ModeForm/Custom/Data"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="BodyPart/VBoxContainer/ModeForm/Custom/Data"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="CancelButton" type="Button" parent="BodyPart/VBoxContainer/ModeForm/Custom/Data/Buttons"]
custom_minimum_size = Vector2(140, 25)
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="CreateButton" type="Button" parent="BodyPart/VBoxContainer/ModeForm/Custom/Data/Buttons"]
custom_minimum_size = Vector2(140, 25)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Create"

[node name="TitlePart" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.152222
grow_horizontal = 2
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u3x6n")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TitlePart"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 75
text = "Logic Workbench"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="BottomPart" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.968889
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u3x6n")
metadata/_edit_use_anchors_ = true

[node name="CreatorLabel" type="Label" parent="BottomPart"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "    Created by : Damaged Engineer Interactive"
vertical_alignment = 1

[node name="VersionLabel" type="Label" parent="BottomPart"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Version : 2.0.0 ( Beta )    "
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="pressed" from="BodyPart/VBoxContainer/ModeForm/Story/Data/Buttons/CancelButton" to="." method="_cancel_button_pressed"]
[connection signal="pressed" from="BodyPart/VBoxContainer/ModeForm/Story/Data/Buttons/CreateButton" to="." method="_create_story_button_pressed"]
[connection signal="pressed" from="BodyPart/VBoxContainer/ModeForm/Career/Data/Buttons/CancelButton" to="." method="_cancel_button_pressed"]
[connection signal="pressed" from="BodyPart/VBoxContainer/ModeForm/Career/Data/Buttons/CreateButton" to="." method="_create_career_button_pressed"]
[connection signal="pressed" from="BodyPart/VBoxContainer/ModeForm/Sandbox/Data/Buttons/CancelButton" to="." method="_cancel_button_pressed"]
[connection signal="pressed" from="BodyPart/VBoxContainer/ModeForm/Sandbox/Data/Buttons/CreateButton" to="." method="_create_sandbox_button_pressed"]
[connection signal="pressed" from="BodyPart/VBoxContainer/ModeForm/Custom/Data/Buttons/CancelButton" to="." method="_cancel_button_pressed"]
[connection signal="pressed" from="BodyPart/VBoxContainer/ModeForm/Custom/Data/Buttons/CreateButton" to="." method="_create_custom_button_pressed"]
