extends Control


func _cancel_button_pressed() -> void:
	Global.change_view("Home")


func _create_story_button_pressed() -> void:
	# Make story mode save
	pass


func _create_career_button_pressed() -> void:
	pass # Replace with function body.


func _create_sandbox_button_pressed() -> void:
	pass # Replace with function body.


func _create_custom_button_pressed() -> void:
	pass # Replace with function body.
